// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link changes the class when hovered 1`] = `
<a
  className="normal"
  href="https://skillfactory.ru/"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Skill Factory
</a>
`;

exports[`Link changes the class when hovered 2`] = `
<a
  className="hovered"
  href="https://skillfactory.ru/"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Skill Factory
</a>
`;

exports[`Link changes the class when hovered 3`] = `
<a
  className="normal"
  href="https://skillfactory.ru/"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Skill Factory
</a>
`;
